<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navDoneView"
            android:icon="@drawable/gallery"
            android:title="@string/drawer_done"/>

        <item
            android:id="@+id/navTodoView"
            android:icon="@drawable/task"
            android:title="@string/drawer_todo"/>

        <item
            android:id="@+id/navSync"
            android:icon="@drawable/sync"
            android:title="@string/drawer_sync"/>
        <item
            android:id="@+id/navSetting"
            android:icon="@drawable/setting"
            android:title="@string/drawer_setting"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
