<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_take_photo"
        android:icon="@drawable/camera"
        android:orderInCategory="1"
        android:title="Camera"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_file_browser"
        android:icon="@drawable/folder"
        android:orderInCategory="2"
        android:title="File"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_folder_browser"
        android:orderInCategory="99"
        android:title="Load All Images In Folder"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_all"
        android:orderInCategory="100"
        android:title="@string/action_edit_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="101"
        android:title="@string/action_delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_info"
        android:orderInCategory="102"
        android:title="@string/action_info"
        app:showAsAction="never"/>
</menu>
