<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/async_label_server"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/etServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/round_edit_text"
                android:imeOptions="actionDone"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/async_label_username"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/round_edit_text"
                android:imeOptions="actionDone"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/async_label_password"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/round_edit_text"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onStartSyncClick"
                android:paddingBottom="15sp"
                android:paddingLeft="30sp"
                android:paddingRight="30sp"
                android:paddingTop="15sp"
                android:text="@string/async_button_start"
                android:textAllCaps="false"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
