<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/tvInfoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edit_text"
                android:hint="@string/aie_input_hint"
                android:imeOptions="actionDone"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="30sp"
                android:paddingTop="10sp"
                android:singleLine="true"/>

            <ImageButton
                android:id="@+id/ibClearInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5sp"
                android:background="@drawable/delete"
                android:onClick="onClearInputClick"/>
        </FrameLayout>

        <ImageButton
            android:id="@+id/ibAddInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:background="@drawable/add_tag"
            android:onClick="onAddInfoClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="7sp"
        android:gravity="center"
        android:orientation="horizontal">

        <the.miner.activity.override.GMCustomImageView
            android:id="@+id/ivPreviewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="onThumbnailClick"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSaveClick"
                android:text="@string/aie_save"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onMoveToTaskClick"
                android:text="@string/aie_move_to_todo"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDeleteImageClick"
                android:text="@string/aie_delete_image"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="7sp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/categoryArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/captionArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
